--- a/.github/workflows/pylint-pytest.yml
+++ b/.github/workflows/pylint-pytest.yml
@@ -1,4 +1,4 @@
-name: Pylint
+name: Pylint-Pytest
 
 on: [push]
 
@@ -16,7 +16,10 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint
+        pip install pylint pytest
     - name: Analysing the code with pylint
       run: |
         pylint `ls -R|grep .py$|xargs`
+    - name: Test with pytest
+      run: |
+        pytest
